<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SearchActivity">

    <!-- Questions Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:background="@drawable/rounded_background">

        <!-- When Question -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_calendar"
                android:contentDescription="@string/question_when" />

            <EditText
                android:id="@+id/startDateEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/question_when_start"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"
                android:background="@null" />


            <EditText
                android:id="@+id/endDateEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/question_when_end"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"
                android:background="@null" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_question"
                android:contentDescription="@string/question_where" />

            <AutoCompleteTextView
                android:id="@+id/locationAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Lieu approximatif" />
        </LinearLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/buttonColor"
            android:padding="16dp"
            android:layout_alignParentBottom="true"/>

    </LinearLayout>

    <!-- Footer -->
    <include
        layout="@layout/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/footer_layout"/>


</RelativeLayout>
