<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/headerBackground"
            android:paddingBottom="4dp">

            <LinearLayout
                android:id="@+id/header_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/logo_desc"
                    android:src="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="Paris Caretaker Service"
                    android:textColor="@android:color/white"
                    android:textSize="28sp" />
            </LinearLayout>

            <!-- icons -->
            <LinearLayout
                android:id="@+id/icons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_layout"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- City Icon and Title -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/title_city"
                        android:src="@drawable/icon_city"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_city"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Countryside Icon and Title -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/title_countryside"
                        android:src="@drawable/icon_countryside"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_countryside"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Sea Icon and Title -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/title_sea"
                        android:src="@drawable/icon_sea"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_sea"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Mountain Icon and Title -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/title_mountain"
                        android:src="@drawable/icon_mountain"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_mountain"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Forest Icon and Title -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/title_forest"
                        android:src="@drawable/icon_forest"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_forest"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@id/header_container"
            android:background="@drawable/shadow_header" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>